--- a/cursos.html
+++ b/cursos.html
@@ -46,7 +46,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/f">simple website builder</a></section><section class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--full-height mbr-section--bg-adapted" id="header4-n" data-rv-view="117" style="background-image: url(assets/images/a1-7-1920x1102.jpg);">
+<section class="engine"><a href="https://mobirise.info/e">make a site</a></section><section class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--full-height mbr-section--bg-adapted" id="header4-n" data-rv-view="117" style="background-image: url(assets/images/a1-7-1920x1102.jpg);">
     <div class="mbr-box__magnet mbr-box__magnet--sm-padding mbr-box__magnet--center-center mbr-after-navbar">
         <div class="mbr-overlay" style="opacity: 0; background-color: rgb(255, 255, 255);"></div>
         <div class="mbr-box__container mbr-section__container container">
@@ -354,7 +354,7 @@
 
 <section class="mbr-section mbr-section--relative" id="msg-box4-1f" data-rv-view="143" style="background-color: rgb(255, 255, 255);">
     
-    <div class="mbr-section__container mbr-section__container--isolated container" style="padding-top: 93px; padding-bottom: 124px;">
+    <div class="mbr-section__container mbr-section__container--isolated container" style="padding-top: 31px; padding-bottom: 31px;">
         <div class="row">
             <div class="mbr-box mbr-box--fixed mbr-box--adapted">
                 <div class="mbr-box__magnet mbr-box__magnet--top-right mbr-section__left col-sm-6 image-size" style="width: 49%;">
@@ -390,7 +390,7 @@
                             <div class="hide" data-form-alert-success="true">Gracias tu mensaje a sido enviado.</div>
                         </div>
                         <form action="https://mobirise.com/" method="post" data-form-title="PREGUNTAS Y DUDAS?">
-                            <input type="hidden" value="gIYKbCpIBpw2ue+VRsuhLieU1qe0SPLBljlCCCkmPLThrMX8GvKJ9hCct5FY0esnQ82DDb+4qj+gQHsnlHbWqXGQX5cf6gJH4jaNL6QlfZZfTkqygkH2GnDdLNzbb54E" data-form-email="true">
+                            <input type="hidden" value="ztQV7DsABUP2J1EnU0bGl899biNd4iEA+RIWfYFjNC2ownzDQsatAgIwBhq+A/6yCQQh/2UdST7GB6aLhl+cUYq6sHk+0jPgN5zmHle9u3UTS4XyjPG7juZjnTXyiVQK" data-form-email="true">
                             <div class="form-group">
                                 <input type="text" class="form-control" name="name" required="" placeholder="Nombre*" data-form-field="Name">
                             </div>
