--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html  >
-   <head>
+<html>
+   <iframe src="index2.html"></iframe>
+<head>
 </html>
 <head>
   <!-- Site made with Mobirise Website Builder v4.12.0, https://mobirise.com -->
