--- a/cursos.html
+++ b/cursos.html
@@ -23,7 +23,7 @@
   
 </head>
 <body>
-  <section class="mbr-navbar mbr-navbar--freeze mbr-navbar--absolute mbr-navbar--sticky mbr-navbar--auto-collapse mbr-navbar--transparent" id="ext_menu-g" data-rv-view="85">
+  <section class="mbr-navbar mbr-navbar--freeze mbr-navbar--absolute mbr-navbar--sticky mbr-navbar--collapsed mbr-navbar--transparent" id="ext_menu-g" data-rv-view="85">
     <div class="mbr-navbar__section mbr-section">
         <div class="mbr-section__container container">
             <div class="mbr-navbar__container">
@@ -37,7 +37,7 @@
                 <div class="mbr-navbar__column mbr-navbar__menu">
                     <nav class="mbr-navbar__menu-box mbr-navbar__menu-box--inline-right">
                         <div class="mbr-navbar__column">
-                            <ul class="mbr-navbar__items mbr-navbar__items--right float-left mbr-buttons mbr-buttons--freeze mbr-buttons--right btn-decorator mbr-buttons--active mbr-buttons--only-links"><li class="mbr-navbar__item"><a class="mbr-buttons__link btn text-white" href="index.html"><span class="mbrib-touch mbr-iconfont mbr-iconfont-btn" style="font-size: 32px; color: rgb(147, 101, 184);"></span>INICIO</a></li> <li class="mbr-navbar__item"><a class="mbr-buttons__link btn text-white" href="index.html#content5-9"><span class="mbrib-video mbr-iconfont mbr-iconfont-btn" style="font-size: 32px; color: rgb(226, 80, 65);"></span>REEL</a></li> <li class="mbr-navbar__item"><a class="mbr-buttons__link btn text-white" href="index.html#content5-166"><span class="mbrib-change-style mbr-iconfont mbr-iconfont-btn" style="font-size: 25px; color: rgb(255, 255, 255);"></span>IDEAS</a></li><li class="mbr-navbar__item"><a class="mbr-buttons__link btn text-white" href="index.html#content5-b"><span class="mbrib-shopping-cart mbr-iconfont mbr-iconfont-btn" style="font-size: 25px; color: rgb(122, 198, 115);"></span>TIENDA</a></li><li class="mbr-navbar__item"><a class="mbr-buttons__link btn text-white" href="index.html#content5-6"><span class="mbrib-user mbr-iconfont mbr-iconfont-btn" style="font-size: 25px; color: rgb(250, 175, 64);"></span>CONTACTO</a></li> <li class="mbr-navbar__item"><a class="mbr-buttons__link btn text-white" href="cursos.html" target="_blank"><span class="mbri-touch mbr-iconfont mbr-iconfont-btn" style="font-size: 26px;"></span>WEBGL</a></li>   </ul>                            
+                            <ul class="mbr-navbar__items mbr-navbar__items--right float-left mbr-buttons mbr-buttons--freeze mbr-buttons--right btn-decorator mbr-buttons--activated mbr-buttons--only-links"><li class="mbr-navbar__item"><a class="mbr-buttons__link btn text-white" href="index.html"><span class="mbrib-touch mbr-iconfont mbr-iconfont-btn" style="font-size: 32px; color: rgb(147, 101, 184);"></span>INICIO</a></li> <li class="mbr-navbar__item"><a class="mbr-buttons__link btn text-white" href="index.html#content5-9"><span class="mbrib-video mbr-iconfont mbr-iconfont-btn" style="font-size: 32px; color: rgb(226, 80, 65);"></span>REEL</a></li> <li class="mbr-navbar__item"><a class="mbr-buttons__link btn text-white" href="index.html#content5-166"><span class="mbrib-change-style mbr-iconfont mbr-iconfont-btn" style="font-size: 25px; color: rgb(255, 255, 255);"></span>IDEAS</a></li><li class="mbr-navbar__item"><a class="mbr-buttons__link btn text-white" href="index.html#content5-b"><span class="mbrib-shopping-cart mbr-iconfont mbr-iconfont-btn" style="font-size: 25px; color: rgb(122, 198, 115);"></span>TIENDA</a></li><li class="mbr-navbar__item"><a class="mbr-buttons__link btn text-white" href="index.html#content5-6"><span class="mbrib-user mbr-iconfont mbr-iconfont-btn" style="font-size: 25px; color: rgb(250, 175, 64);"></span>CONTACTO</a></li> <li class="mbr-navbar__item"><a class="mbr-buttons__link btn text-white" href="page3.html" target="_blank"><span class="mbri-touch mbr-iconfont mbr-iconfont-btn" style="font-size: 26px;"></span>WEBGL</a></li>   </ul>                            
                             
                         </div>
                     </nav>
@@ -47,7 +47,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/f">simple web builder</a></section><section class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--full-height mbr-section--bg-adapted mbr-after-navbar" id="header4-n" data-rv-view="87" style="background-image: url(assets/images/a1-7-1920x1102.jpg);">
+<section class="engine"><a href="https://mobirise.info/v">free html templates</a></section><section class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--full-height mbr-section--bg-adapted mbr-after-navbar" id="header4-n" data-rv-view="87" style="background-image: url(assets/images/a1-7-1920x1102.jpg);">
     <div class="mbr-box__magnet mbr-box__magnet--sm-padding mbr-box__magnet--center-center">
         <div class="mbr-overlay" style="opacity: 0; background-color: rgb(255, 255, 255);"></div>
         <div class="mbr-box__container mbr-section__container container">
@@ -391,7 +391,7 @@
                             <div class="hide" data-form-alert-success="true">Gracias tu mensaje a sido enviado.</div>
                         </div>
                         <form action="https://mobirise.com/" method="post" data-form-title="PREGUNTAS Y DUDAS?">
-                            <input type="hidden" value="aNicwbbKRq35T03E434uBZjfKcV7Cywi0KdRAezXaZP8pwjp1rL9kNR4F06djIyjGTzPh63e9YMDVCcpUozl+R3MTP4nhHofXvdXD/6dbYmw3+bLFMwZ5cW8c7mp3qU/" data-form-email="true">
+                            <input type="hidden" value="l2S24lN4D3noRKephGvZ/QtiXsOI2NLyyVkoB8PMZQn/FlFwk9eH01/6xiIhkdxX94xMCoyQ+NuzH2aZbYVeHccme+5o8c/QHLv9fHhRc55pAw/cDIOSKkPMIdmEoHc1" data-form-email="true">
                             <div class="form-group">
                                 <input type="text" class="form-control" name="name" required="" placeholder="Nombre*" data-form-field="Name">
                             </div>
