--- a/page3.html
+++ b/page3.html
@@ -9,8 +9,7 @@
     <script src="TemplateData/UnityProgress.js"></script>
     <script src="Build/UnityLoader.js"></script>
     <script>
-      var unityInstance = UnityLoader.Error.Handler = function() {};
-UnityLoader.compatibilityCheck = function(e,t,r) { t(); };
+      var unityInstance = UnityLoader.instantiate("unityContainer", "Build/test.json", {onProgress: UnityProgress});
     </script>
   </head>
   <body>
