--- a/page3.html
+++ b/page3.html
@@ -9,9 +9,7 @@
     <script src="TemplateData/UnityProgress.js"></script>
     <script src="Build/UnityLoader.js"></script>
     <script>
-    	UnityLoader.Error.Handler = function() {};
-		UnityLoader.compatibilityCheck = function(e,t,r) { t(); };
-      var unityInstance = UnityLoader.instantiate("unityContainer", "Build/Nueva carpeta.json", {onProgress: UnityProgress});
+      var unityInstance = UnityLoader.instantiate("unityContainer", "Build/testgamma2.json", {onProgress: UnityProgress});
     </script>
   </head>
   <body>
