--- a/page3.html
+++ b/page3.html
@@ -1,22 +1,27 @@
 <!DOCTYPE html>
 <html lang="en-us">
-<head>
+  <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>webgl</title>
+    <title>Unity WebGL Player | webgl</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
-    <script src="TemplateData/UnityProgress.javascript"></script>
+    <script src="TemplateData/UnityProgress.js"></script>
     <script src="Build/UnityLoader.js"></script>
     <script>
-        var gameInstance = UnityLoader.instantiate("gameContainer", "Build/test linear2.json", {onProgress: UnityProgress});
+    	UnityLoader.Error.Handler = function() {};
+		UnityLoader.compatibilityCheck = function(e,t,r) { t(); };
+      var unityInstance = UnityLoader.instantiate("unityContainer", "Build/Nueva carpeta.json", {onProgress: UnityProgress});
     </script>
-</head>
-<body>
-<div class="webgl-content">
-    <div id="gameContainer" style="width: 960px; height: 600px"></div>
-</div>
-<div class="simmer">template by: <a href="https://simmer.io" target="_blank">SIMMER.io</a></div>
-<script src="TemplateData/responsive.javascript"></script>
-</body>
+  </head>
+  <body>
+    <div class="webgl-content">
+      <div id="unityContainer" style="width: 960px; height: 600px"></div>
+      <div class="footer">
+        <div class="webgl-logo"></div>
+        <div class="fullscreen" onclick="unityInstance.SetFullscreen(1)"></div>
+        <div class="title">webgl</div>
+      </div>
+    </div>
+  </body>
 </html>
